[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Objects/PressurePlate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Objects/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Levels/Level2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Objects/Lever.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Objects/Block.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Milo/Milo.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 177.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 334.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38.5, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25.5, 231 )

[node name="Level2" type="Node"]

[node name="Level2Manager" type="Node" parent="." groups=["LevelManager"]]
script = ExtResource( 3 )

[node name="Milo" parent="." instance=ExtResource( 7 )]
position = Vector2( 623, -152 )

[node name="Platforms" type="Node" parent="."]

[node name="StartingPlatform" parent="Platforms" instance=ExtResource( 2 )]

[node name="StartingPlatform2" parent="Platforms" instance=ExtResource( 2 )]
position = Vector2( 470, 0 )

[node name="StartingPlatform3" parent="Platforms" instance=ExtResource( 2 )]
position = Vector2( 940, 0 )

[node name="TimerPuzzle" type="Node" parent="."]

[node name="PressurePlate1" parent="TimerPuzzle" instance=ExtResource( 1 )]
position = Vector2( 1068, -54 )

[node name="TimerPlatform1" parent="TimerPuzzle" instance=ExtResource( 2 )]
position = Vector2( 1520, 460 )

[node name="TimerPlatform2" parent="TimerPuzzle" instance=ExtResource( 2 )]
position = Vector2( 2070, 460 )

[node name="TimerPlatform3" parent="TimerPuzzle" instance=ExtResource( 2 )]
position = Vector2( 2620, 460 )

[node name="TimerPlatform4" parent="TimerPuzzle" instance=ExtResource( 2 )]
position = Vector2( 3170, 460 )

[node name="LeverPuzzle" type="Node" parent="."]

[node name="Platform" parent="LeverPuzzle" instance=ExtResource( 2 )]
position = Vector2( 3820, -720 )

[node name="Platform2" parent="LeverPuzzle" instance=ExtResource( 2 )]
position = Vector2( 4295, -720 )

[node name="Platform3" parent="LeverPuzzle" instance=ExtResource( 2 )]
position = Vector2( 4770, -720 )

[node name="Lever" parent="LeverPuzzle" instance=ExtResource( 4 )]
position = Vector2( 4000, -790 )

[node name="Lever2" parent="LeverPuzzle" instance=ExtResource( 4 )]
position = Vector2( 4250, -790 )

[node name="Lever3" parent="LeverPuzzle" instance=ExtResource( 4 )]
position = Vector2( 4500, -790 )

[node name="PuzzleDoor" type="KinematicBody2D" parent="LeverPuzzle"]
position = Vector2( 4785, -938 )
__meta__ = {
"_edit_group_": true
}

[node name="Door" type="Sprite" parent="LeverPuzzle/PuzzleDoor"]
scale = Vector2( 1, 5.46875 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeverPuzzle/PuzzleDoor"]
position = Vector2( 3, -0.5 )
shape = SubResource( 1 )

[node name="Platform" parent="." instance=ExtResource( 2 )]
position = Vector2( 5400, -450 )

[node name="Platform2" parent="." instance=ExtResource( 2 )]
position = Vector2( 6050, -580 )

[node name="Platform3" parent="." instance=ExtResource( 2 )]
position = Vector2( 6700, -250 )

[node name="Platform4" parent="." instance=ExtResource( 2 )]
position = Vector2( 7175, -250 )

[node name="Platform5" parent="." instance=ExtResource( 2 )]
position = Vector2( 8000, -350 )

[node name="Platform6" parent="." instance=ExtResource( 2 )]
position = Vector2( 8575, -350 )

[node name="Platform7" parent="." instance=ExtResource( 2 )]
position = Vector2( 9345, -352 )

[node name="Platform8" parent="." instance=ExtResource( 2 )]
position = Vector2( 10007, -358 )

[node name="Platform9" parent="." instance=ExtResource( 2 )]
position = Vector2( 10494, -452 )

[node name="Platform10" parent="." instance=ExtResource( 2 )]
position = Vector2( 10969, -452 )

[node name="Platform11" parent="." instance=ExtResource( 2 )]
position = Vector2( 11444, -452 )

[node name="Platform12" parent="." instance=ExtResource( 2 )]
position = Vector2( 11919, -452 )

[node name="PlatformSmallBlock" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 9675, -225 )

[node name="BlockPuzzle" type="Node" parent="."]

[node name="SmallBlockBlocker" type="KinematicBody2D" parent="BlockPuzzle"]
position = Vector2( 9350, -789 )

[node name="SmallBlockBlocker" type="Sprite" parent="BlockPuzzle/SmallBlockBlocker"]
scale = Vector2( 10.4687, 0.320312 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockPuzzle/SmallBlockBlocker"]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="LargeBlock" parent="BlockPuzzle" instance=ExtResource( 6 )]
position = Vector2( 8721, -482 )
scale = Vector2( 3, 3 )

[node name="SmallBlock" parent="BlockPuzzle" instance=ExtResource( 6 )]
position = Vector2( 9351, -843 )
scale = Vector2( 1.5, 1.5 )

[node name="SkinnyBlockFloorBlocker" type="KinematicBody2D" parent="BlockPuzzle"]
position = Vector2( 8286, -354 )
__meta__ = {
"_edit_group_": true
}

[node name="SkinnyBlockFloorBlocker" type="Sprite" parent="BlockPuzzle/SkinnyBlockFloorBlocker"]
scale = Vector2( 1.20313, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockPuzzle/SkinnyBlockFloorBlocker"]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="SkinnyBlock" parent="BlockPuzzle" instance=ExtResource( 6 )]
position = Vector2( 8465, -438 )
scale = Vector2( 0.6, 1.5 )

[node name="FinalDoor" type="KinematicBody2D" parent="BlockPuzzle"]
position = Vector2( 10030, -625 )

[node name="FinalDoor" type="Sprite" parent="BlockPuzzle/FinalDoor"]
scale = Vector2( 0.843762, 7.17971 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockPuzzle/FinalDoor"]
position = Vector2( 1.5, -3 )
shape = SubResource( 4 )

[node name="PressurePlate2" parent="BlockPuzzle" instance=ExtResource( 1 )]
position = Vector2( 8957, -215 )
scale = Vector2( 3, 1 )

[node name="PressurePlate3" parent="BlockPuzzle" instance=ExtResource( 1 )]
position = Vector2( 8285, -277 )

[node name="PressurePlate4" parent="BlockPuzzle" instance=ExtResource( 1 )]
position = Vector2( 9675, -281 )
scale = Vector2( 2, 1 )

[node name="PlatformSkinnyBlock" parent="BlockPuzzle" instance=ExtResource( 2 )]
visible = false
position = Vector2( 8293, -217 )

[node name="PlatformLargeBlock" parent="BlockPuzzle" instance=ExtResource( 2 )]
visible = false
position = Vector2( 8950, -149 )
